# raycasting

./: CMakeLists.txt  README.md  main.cpp
include/: Data.hpp  Physics.hpp  RayCasting.hpp  Vec2.hpp
src/: Physics.cpp  RayCasting.cpp  Vec2.cpp
